Verion 0.9.45dev (?? ??? 2004)
  - Consolidated styles
  - Added 'Back' links on pages like groups_edit.php
  - Fixed some php for styling headers & cells in selected views
  - Added border to colors admin section
  - Added img.help class for help images
  - Added docs to styles.php (will eventually end up in a styles
  documentation, of some sort)
  - Continued making code easier to read post-rendering
  - Removing blank lines at the end of js files
  - Updating functions.php to partially implement new styling system for
  viewt.php
  - Updating styles.php with more comments (encapsulated in php tags so
  they're stripped in processing) & removing old classes
  - Removing blanks lines at the end of js.php & site_extras.php
  - Updating admin docs with more efficient CSS & HTML
  - Converting year.php to new style system & adding comments for new minicals
  - Converting viewt.php over to new style system & fixing a couple odd
  rendering issues
  - Converting day.php over to new style system (particularly the header)
  - Making code in activity log easier to read both before & after rendering
  - Disallow includes from being called directly
  - Fixed several security issues reported by Joxean Koret 
  - Added "Admin" links to return user to adminhome.php from admin pages
  - Improved iCal import handling of folded lines (data that spreads
    over more than one line of text)
  - Reapplied patch 1044285: today & weekend classes got reversed
  - Changed '>' character to be '&raquo;'
  - Added 'bullet' class for event bullets being styled in styles.php
  - Changed background color for date links to a border
  - Moved help button to new icon in-line with the header
  - Added unique id to body tag for new style system
  - Added "preview" link to preview view types while managing views
  - Fixed funky rendering of new trailer in Opera & Safari
  - Added .printer class to format printer-friendly link