@@ -1,7 +1,4 @@
 <?php
-// CSS NOTES:
-// THE MINICAL CLASS FOR MONTH.PHP _MUST_ APPEAR _AFTER_ THE CLASS FOR
-// THE MAIN TABLE.
 include_once 'includes/init.php';
 
 if (($user != $login) && $is_nonuser_admin)
@@ -21,8 +18,15 @@ $prevyear = date ( "Y", $prev );
 $prevmonth = date ( "m", $prev );
 //$prevdate = date ( "Ymd" );
 
-$startdate = sprintf ( "%04d%02d01", $thisyear, $thismonth );
-$enddate = sprintf ( "%04d%02d31", $thisyear, $thismonth );
+if ( ! empty ( $bold_days_in_year ) && $bold_days_in_year == 'Y' ) {
+	$boldDays = true;
+	$startdate = sprintf ( "%04d%02d01", $prevyear, $prevmonth );
+	$enddate = sprintf ( "%04d%02d31", $nextyear, $nextmonth );
+} else {
+	$boldDays = false;
+	$startdate = sprintf ( "%04d%02d01", $thisyear, $thismonth );
+	$enddate = sprintf ( "%04d%02d31", $thisyear, $thismonth );
+}
 
 $HeadX = '';
 if ( $auto_refresh == "Y" && ! empty ( $auto_refresh_time ) ) {
@@ -44,105 +48,16 @@ $events = read_events ( ( ! empty ( $user ) && strlen ( $user ) )
 
 <?php
 if ( ! $friendly ) {
-  echo "<table class=\"minical\" style=\"float: right;\" cellspacing=\"1\" cellpadding=\"2\">";
-  if ( $WEEK_START == "1" )
-    $wkstart = get_monday_before ( $nextyear, $nextmonth, 1 );
-  else
-    $wkstart = get_sunday_before ( $nextyear, $nextmonth, 1 );
-  $monthstart = mktime ( 3, 0, 0, $nextmonth, 1, $nextyear );
-  $monthend = mktime ( 3, 0, 0, $nextmonth + 1, 0, $nextyear );
-  echo "<tr><td colspan=\"7\" class=\"month\">" .
-    "<a href=\"month.php?$u_url";
-  echo "year=$nextyear&amp;month=$nextmonth$caturl\">" .
-    date_to_str ( sprintf ( "%04d%02d01", $nextyear, $nextmonth ),
-    $DATE_FORMAT_MY, false, false ) .
-    "</a></td></tr>\n";
-  echo "<tr class=\"day\">";
-  if ( $WEEK_START == 0 ) echo "<th>" .
-    weekday_short_name ( 0 ) . "</th>\n";
-  for ( $i = 1; $i < 7; $i++ ) {
-    echo "<th>" .
-      weekday_short_name ( $i ) . "</th>\n";
-  }
-  if ( $WEEK_START == 1 ) echo "<th>" .
-    weekday_short_name ( 0 ) . "</th>\n";
-  echo "</tr>\n";
-  for ( $i = $wkstart; date ( "Ymd", $i ) <= date ( "Ymd", $monthend );
-    $i += ( 24 * 3600 * 7 ) ) {
-    print "<tr>\n";
-    for ( $j = 0; $j < 7; $j++ ) {
-      $date = $i + ( $j * 24 * 3600 );
-      if ( date ( "Ymd", $date ) >= date ( "Ymd", $monthstart ) &&
-        date ( "Ymd", $date ) <= date ( "Ymd", $monthend ) ) {
-        print "<td class=\"numdate\"><a href=\"day.php?$u_url&amp;date=".date("Ymd", $date)."\">" . date ( "d", $date ) . "</a></td>\n";
-      } else {
-        print "<td>&nbsp;</td>\n";
-      }
-    }
-    if ( isset ( $DISPLAY_WEEKNUMBER ) && $DISPLAY_WEEKNUMBER == 'Y' ) {
-      print "<td><a href=\"week.php?$u_url&amp;date=".date("Ymd", $i)."\" class=\"weeknumber\">(" . week_number($i) . ")</a></td>\n";
-    }
-    print "</tr>\n";
-  }
-  echo "</table>\n";
-}
-?>
-
-<?php
-if ( ! $friendly ) {
-  echo "<table class=\"minical\" style=\"float:left;\" cellspacing=\"1\" cellpadding=\"2\">\n";
-  if ( $WEEK_START == "1" )
-    $wkstart = get_monday_before ( $prevyear, $prevmonth, 1 );
-  else
-    $wkstart = get_sunday_before ( $prevyear, $prevmonth, 1 );
-  $monthstart = mktime ( 3, 0, 0, $prevmonth, 1, $prevyear );
-  $monthend = mktime ( 3, 0, 0, $prevmonth + 1, 0, $prevyear );
-  echo "<tr><td colspan=\"7\" class=\"month\">" .
-    "<a href=\"month.php?$u_url&amp;";
-  $prevmonth_name = month_name ( $prevmonth );
-  echo "year=$prevyear&amp;month=$prevmonth$caturl\">" .
-    date_to_str ( sprintf ( "%04d%02d01", $prevyear, $prevmonth ),
-    $DATE_FORMAT_MY, false, false ) .
-    "</a></td></tr>\n";
-  echo "<tr class=\"day\">\n";
-  if ( $WEEK_START == 0 ) echo "<th>" .
-    weekday_short_name ( 0 ) . "</th>\n";
-  for ( $i = 1; $i < 7; $i++ ) {
-    echo "<th>" .
-      weekday_short_name ( $i ) . "</th>\n";
-  }
-  if ( $WEEK_START == 1 ) echo "<th>" .
-    weekday_short_name ( 0 ) . "</th>\n";
-  echo "</tr>\n";
-  for ( $i = $wkstart; date ( "Ymd", $i ) <= date ( "Ymd", $monthend );
-    $i += ( 24 * 3600 * 7 ) ) {
-    print "<tr>\n";
-    for ( $j = 0; $j < 7; $j++ ) {
-      $date = $i + ( $j * 24 * 3600 );
-      if ( date ( "Ymd", $date ) >= date ( "Ymd", $monthstart ) &&
-        date ( "Ymd", $date ) <= date ( "Ymd", $monthend ) ) {
-        print "<td class=\"numdate\"><a href=\"day.php?$u_url&amp;date=".date("Ymd", $date)."\">" . date ( "d", $date ) . "</a></td>\n";
-      } else {
-        print "<td>&nbsp;</td>\n";
-      }
-    }
-    if ( isset ( $DISPLAY_WEEKNUMBER ) && $DISPLAY_WEEKNUMBER == 'Y' ) {
-      print "<td class=\"weeknumber\"><a href=\"week.php?$u_url&amp;date=".date("Ymd", $i)."\">(" . week_number($i) . ")</a></td>\n";
-    }
-    print "</tr>\n";
-  }
-  echo "</table>\n";
+	display_small_month ( $prevmonth, $prevyear, true, true, "prevmonth" );
+	display_small_month ( $nextmonth, $nextyear, true, true, "nextmonth" );
 }
 ?>
 <div class="title">
-<span class="date"><br />
-<?php
+<span class="date"><br /><?php
   echo date_to_str ( sprintf ( "%04d%02d01", $thisyear, $thismonth ),
     $DATE_FORMAT_MY, false, false );
-?>
-</span>
-<span class="user">
-<?php
+?></span>
+<span class="user"><?php
   if ( $single_user == "N" ) {
     echo "<br />\n";
     echo $user_fullname;
@@ -219,7 +134,7 @@ for ( $i = $wkstart; date ( "Ymd", $i ) <= date ( "Ymd", $monthend );
       print_date_entries ( date ( "Ymd", $date ),
         ( ! empty ( $user ) ) ? $user : $login,
         $friendly, false );
-      print "</td>\n";
+	print "</td>\n";
     } else {
       print "<td>&nbsp;</td>\n";
     }
